Bug 165200 - Number.toLocaleString() localization.  r=brendan